--- a/index.html
+++ b/index.html
@@ -441,6 +441,14 @@
           <img class="img img-fluid" alt="Quantum" src="#" />
         </div>
 
+        <!-- PHERO -->
+        <div class="imageInGallery">
+          <div class="visitSiteContainer">
+            <a href="https://shrine-pro.myshopify.com/" target="_blank" class="btn discoverBtn">Visit</a>
+          </div>
+          <img class="img img-fluid" alt="Phero" src="https://i.imgur.com/w3s5fB3.png" />
+        </div>
+
 
         <div class="imageInGallery">
           <div class="visitSiteContainer">
@@ -448,12 +456,8 @@
           </div>
           <img class="img img-fluid" alt="website image" src="https://i.imgur.com/Tf3q5hj.jpg" />
         </div>
-        <div class="imageInGallery">
-          <div class="visitSiteContainer">
-            <a href="#" target="_blank" class="btn discoverBtn">Visit</a>
-          </div>
-          <img class="img img-fluid" alt="website image" src="https://i.imgur.com/Tf3q5hj.jpg" />
-        </div>
+
+        
         <div class="imageInGallery">
           <div class="visitSiteContainer">
             <a href="#" target="_blank" class="btn discoverBtn">Visit</a>
