--- a/index.html
+++ b/index.html
@@ -454,10 +454,10 @@
           <div class="visitSiteContainer">
             <a href="#" target="_blank" class="btn discoverBtn">Visit</a>
           </div>
-          <img class="img img-fluid" alt="website image" src="https://i.imgur.com/Tf3q5hj.jpg" />
+          <img class="img img-fluid" alt="website image" src="https://i.imgur.com/EqIyebb.png" />
         </div>
 
-        
+
         <div class="imageInGallery">
           <div class="visitSiteContainer">
             <a href="#" target="_blank" class="btn discoverBtn">Visit</a>
