--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
           <div class="visitSiteContainer">
             <a href="https://shrine-pro.myshopify.com/" target="_blank" class="btn discoverBtn">Visit</a>
           </div>
-          <img class="img img-fluid" alt="Phero" src="https://i.imgur.com/w3s5fB3.png" />
+          <img class="img img-fluid" alt="Phero" src="https://i.imgur.com/EqIyebb.png" />
         </div>
 
 
