--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
 
           <form class="form-outline form-white mb-4 newsletterForm">
             <div class="form-group">
-              <input aria-label="Newsletter email input" class="mailsInfos" type="text" required />
+              <input aria-label="Newsletter email input" id="emailNewsLetter" class="mailsInfos" type="text" required />
               <label for="name">Newsletter</label>
             </div>
             <button class="btn submitBtn" type="submit">Submit</button>
