--- a/index.html
+++ b/index.html
@@ -393,6 +393,7 @@
 
     <div class="galleryContainer">
       <div class="gallery sections">
+        <!-- 1260 x 760 these img sizes -->
         <!-- ARANORA -->
         <div class="imageInGallery">
           <div class="visitSiteContainer">
@@ -417,12 +418,12 @@
           <img class="img img-fluid" alt="Vegety website image" src="https://i.imgur.com/Tf3q5hj.jpg" />
         </div>
 
-        <!-- Oceanway -->
+        <!-- Digitechium -->
         <div class="imageInGallery">
           <div class="visitSiteContainer">
-            <a href="https://itsalivenger.github.io/Oceanway/#" target="_blank" class="btn discoverBtn">Visit</a>
+            <a href="https://itsalivenger.github.io/Digitechium/" target="_blank" class="btn discoverBtn">Visit</a>
           </div>
-          <img class="img img-fluid" alt="Oceanway" src="#" />
+          <img class="img img-fluid" alt="Oceanway" src="https://i.imgur.com/tIvN7hz.png" />
         </div>
 
         <!-- FrancePapier -->
@@ -430,7 +431,7 @@
           <div class="visitSiteContainer">
             <a href="https://itsalivenger.github.io/Francepapier/" target="_blank" class="btn discoverBtn">Visit</a>
           </div>
-          <img class="img img-fluid" alt="FrancePapier" src="#" />
+          <img class="img img-fluid" alt="FrancePapier" src="https://i.imgur.com/K40Nm6Q.png" />
         </div>
 
         <!-- Quantum -->
@@ -438,7 +439,7 @@
           <div class="visitSiteContainer">
             <a href="https://itsalivenger.github.io/Quantum/" target="_blank" class="btn discoverBtn">Visit</a>
           </div>
-          <img class="img img-fluid" alt="Quantum" src="#" />
+          <img class="img img-fluid" alt="Quantum" src="https://i.imgur.com/IweuOsJ.png" />
         </div>
 
         <!-- PHERO -->
