fixed some small issues

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         Opportunities by Partnering with Us for Unstoppable Growth and
         Success.
       </p>
-      <button class="btn firstSectionBtn">Get Started</button>
+      <button class="btn firstSectionBtn" onclick="scrollToContent('contact')">Get Started</button>
     </div>
     <div id="particles-js" class="particlesContainer"></div>
   </section>
@@ -164,22 +164,22 @@
     </p>
     <div class="sections statisticsContainer">
       <div class="statistics sections">
-        <i class="iconsInWhatWeDo material-symbols-outlined">DoneTask</i>
+        <i class="iconsInWhatWeDo material-symbols-outlined">Task</i>
         <h3 class="numberOfAttr">0</h3>
         <p class="numberDesc">Projects done</p>
       </div>
       <div class="statistics sections">
-        <i class="iconsInWhatWeDo material-symbols-outlined">Donehourglass_bottom</i>
+        <i class="iconsInWhatWeDo material-symbols-outlined">hourglass_bottom</i>
         <h3 class="numberOfAttr">0</h3>
         <p class="numberDesc">working hours</p>
       </div>
       <div class="statistics sections">
-        <i class="iconsInWhatWeDo material-symbols-outlined">Donehow_to_reg</i>
+        <i class="iconsInWhatWeDo material-symbols-outlined">how_to_reg</i>
         <h3 class="numberOfAttr">0</h3>
         <p class="numberDesc">Specialists</p>
       </div>
       <div class="statistics sections">
-        <i class="iconsInWhatWeDo material-symbols-outlined">Doneperson</i>
+        <i class="iconsInWhatWeDo material-symbols-outlined">person</i>
         <h3 class="numberOfAttr">0</h3>
         <p class="numberDesc">Satisfied Customers</p>
       </div>
@@ -953,14 +953,14 @@
             </li>
             <li class="mb-3">
               <span><i class="material-symbols-outlined">mail</i></span><span
-                class="ms-2">CremCreations@gmail.com</span>
+                class="ms-2">contact@CremCreations.com</span>
             </li>
             <li class="mb-3">
               <span><i class="material-symbols-outlined">phone_in_talk</i></span><span class="ms-2">+212 776 41 25
                 46</span>
             </li>
             <li class="mb-3">
-              <span><i class="material-symbols-outlined">phone</i></span><span class="ms-2">+212 644 91 86 81</span>
+              <span><i class="material-symbols-outlined">phone</i></span><span class="ms-2">+212 714-490564</span>
             </li>
           </ul>
         </div>
