--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@
             <a type="button" class="iconsInFooter btn btn-floating btn-primary btn-lg" href="https://twitter.com"><i
                 class="fa fa-twitter"></i></a>
             <!-- Google + -->
-            <a type="button" class="iconsInFooter btn btn-floating btn-primary btn-lg" href="https://LinkedIn.com"><i
+            <a type="button" class="iconsInFooter btn btn-floating btn-primary btn-lg" href="https://www.linkedin.com/in/crem-creations-aa49b9307/"><i
                 class="fa fa-google"></i></a>
             <!-- Linkedin -->
           </div>
