fixed some small issues

--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@
                 class="fa fa-twitter"></i></a>
             <!-- Google + -->
             <a type="button" class="iconsInFooter btn btn-floating btn-primary btn-lg" href="https://www.linkedin.com/in/crem-creations-aa49b9307/"><i
-                class="fa fa-google"></i></a>
+                class="fa fa-linkedin"></i></a>
             <!-- Linkedin -->
           </div>
         </div>
