--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
             <a aria-label="Instagram page link" href="https://www.instagram.com/crem_dev/" type="button"
               class="iconsInFooter btn btn-floating btn-primary btn-lg"><i class="fa fa-instagram"></i></a>
             <!-- Twitter -->
-            <a type="button" class="iconsInFooter btn btn-floating btn-primary btn-lg" href="https://twitter.com"><i
+            <a type="button" class="iconsInFooter btn btn-floating btn-primary btn-lg" href="https://twitter.com/CremCreations"><i
                 class="fa fa-twitter"></i></a>
             <!-- Google + -->
             <a type="button" class="iconsInFooter btn btn-floating btn-primary btn-lg" href="https://www.linkedin.com/in/crem-creations-aa49b9307/"><i
