added twitter and linkedin

--- a/index.html
+++ b/index.html
@@ -919,16 +919,16 @@
 
           <div class="mt-4">
             <!-- Facebook -->
-            <a type="button" class="iconsInFooter btn btn-floating btn-primary btn-lg" href="https://facebook.com"><i
+            <a type="button" class="iconsInFooter btn btn-floating btn-primary btn-lg" target="_blank" href="https://facebook.com"><i
                 class="fa fa-facebook-f"></i></a>
             <!-- Dribbble -->
-            <a aria-label="Instagram page link" href="https://www.instagram.com/crem_dev/" type="button"
+            <a aria-label="Instagram page link" target="_blank" href="https://www.instagram.com/crem_dev/" type="button"
               class="iconsInFooter btn btn-floating btn-primary btn-lg"><i class="fa fa-instagram"></i></a>
             <!-- Twitter -->
-            <a type="button" class="iconsInFooter btn btn-floating btn-primary btn-lg" href="https://twitter.com/CremCreations"><i
-                class="fa fa-twitter"></i></a>
+            <a type="button" class="iconsInFooter btn btn-floating btn-primary btn-lg" target="_blank" href="https://X.com/CremCreations"><i
+                class="fa fa-X"></i></a>
             <!-- Google + -->
-            <a type="button" class="iconsInFooter btn btn-floating btn-primary btn-lg" href="https://www.linkedin.com/in/crem-creations-aa49b9307/"><i
+            <a type="button" class="iconsInFooter btn btn-floating btn-primary btn-lg" target="_blank" href="https://www.linkedin.com/in/crem-creations-aa49b9307/"><i
                 class="fa fa-linkedin"></i></a>
             <!-- Linkedin -->
           </div>
