--- a/index.html
+++ b/index.html
@@ -450,38 +450,47 @@
           <img class="img img-fluid" alt="Phero" src="https://i.imgur.com/EqIyebb.png" />
         </div>
 
-
+        <!-- PentaBrood -->
         <div class="imageInGallery">
           <div class="visitSiteContainer">
-            <a href="#" target="_blank" class="btn discoverBtn">Visit</a>
+            <a href="https://itsalivenger.github.io/PentaBrood" target="_blank" class="btn discoverBtn">Visit</a>
           </div>
-          <img class="img img-fluid" alt="website image" src="https://i.imgur.com/EqIyebb.png" />
+          <img class="img img-fluid" alt="website image" src="https://i.imgur.com/bHvz2nV.png" />
         </div>
 
+        <!-- furni -->
+        <div class="imageInGallery">
+          <div class="visitSiteContainer">
+            <a href="https://themewagon.github.io/furni/" target="_blank" class="btn discoverBtn">Visit</a>
+          </div>
+          <img class="img img-fluid" alt="website image" src="https://i.imgur.com/MUrLpOT.png" />
+        </div>
 
+
+        <!-- fruitables -->
         <div class="imageInGallery">
           <div class="visitSiteContainer">
-            <a href="#" target="_blank" class="btn discoverBtn">Visit</a>
+            <a href="https://themewagon.github.io/fruitables/" target="_blank" class="btn discoverBtn">Visit</a>
           </div>
-          <img class="img img-fluid" alt="website image" src="https://i.imgur.com/Tf3q5hj.jpg" />
+          <img class="img img-fluid" alt="website image" src="https://i.imgur.com/JdD8Lwk.png" />
         </div>
+
+
+        <!-- MiniStore -->
         <div class="imageInGallery">
           <div class="visitSiteContainer">
-            <a href="#" target="_blank" class="btn discoverBtn">Visit</a>
+            <a href="https://themewagon.github.io/MiniStore/" target="_blank" class="btn discoverBtn">Visit</a>
           </div>
-          <img class="img img-fluid" alt="website image" src="https://i.imgur.com/Tf3q5hj.jpg" />
+          <img class="img img-fluid" alt="website image" src="https://i.imgur.com/E0uMkk2.png" />
         </div>
+
+
+        <!-- Productly -->
         <div class="imageInGallery">
           <div class="visitSiteContainer">
-            <a href="#" target="_blank" class="btn discoverBtn">Visit</a>
+            <a href="https://themewagon.github.io/productly/v1.0.0/" target="_blank" class="btn discoverBtn">Visit</a>
           </div>
-          <img class="img img-fluid" alt="website image" src="https://i.imgur.com/Tf3q5hj.jpg" />
-        </div>
-        <div class="imageInGallery">
-          <div class="visitSiteContainer">
-            <a href="#" target="_blank" class="btn discoverBtn">Visit</a>
-          </div>
-          <img class="img img-fluid" alt="website image" src="https://i.imgur.com/Tf3q5hj.jpg" />
+          <img class="img img-fluid" alt="website image" src="https://i.imgur.com/1hBCpjf.png" />
         </div>
       </div>
     </div>
