fixed l icon o emailhandling o contact form

--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
               class="iconsInFooter btn btn-floating btn-primary btn-lg"><i class="fa fa-instagram"></i></a>
             <!-- Twitter -->
             <a type="button" class="iconsInFooter btn btn-floating btn-primary btn-lg" target="_blank" href="https://X.com/CremCreations"><i
-                class="fa fa-X"></i></a>
+                class="fa fa-twitter"></i></a>
             <!-- Google + -->
             <a type="button" class="iconsInFooter btn btn-floating btn-primary btn-lg" target="_blank" href="https://www.linkedin.com/in/crem-creations-aa49b9307/"><i
                 class="fa fa-linkedin"></i></a>
@@ -958,18 +958,18 @@
 
           <ul class="fa-ul" style="margin-left: 1.65em">
             <li class="mb-3">
-              <span><i class="material-symbols-outlined">home</i></span><span class="ms-2">Marrakech</span>
+              <span class="iconSpan"><i class="material-symbols-outlined">home</i></span><span class="ms-2">Marrakech</span>
             </li>
             <li class="mb-3">
-              <span><i class="material-symbols-outlined">mail</i></span><span
+              <span class="iconSpan"><i class="material-symbols-outlined">mail</i></span><span
                 class="ms-2">contact@CremCreations.com</span>
             </li>
             <li class="mb-3">
-              <span><i class="material-symbols-outlined">phone_in_talk</i></span><span class="ms-2">+212 776 41 25
+              <span class="iconSpan"><i class="material-symbols-outlined">phone_in_talk</i></span><span class="ms-2">+212 776 41 25
                 46</span>
             </li>
             <li class="mb-3">
-              <span><i class="material-symbols-outlined">phone</i></span><span class="ms-2">+212 714-490564</span>
+              <span class="iconSpan"><i class="material-symbols-outlined">phone</i></span><span class="ms-2">+212 714-490564</span>
             </li>
           </ul>
         </div>
@@ -1027,7 +1027,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <div class="icon-box">
-              <i class="iconInModal material-symbols-outlined">Done</i>
+              <i class="iconInModal material-symbols-outlined"></i>
             </div>
             <h4 class="modal-title"></h4>
           </div>
