--- a/index.html
+++ b/index.html
@@ -965,11 +965,11 @@
                 class="ms-2">contact@CremCreations.com</span>
             </li>
             <li class="mb-3">
-              <span class="iconSpan"><i class="material-symbols-outlined">phone_in_talk</i></span><span class="ms-2">+212 776 41 25
+              <span class="iconSpan"><i class="material-symbols-outlined">phone_in_talk</i></span><span class="ms-2">+212 644 91 86 81
                 46</span>
             </li>
             <li class="mb-3">
-              <span class="iconSpan"><i class="material-symbols-outlined">phone</i></span><span class="ms-2">+212 714-490564</span>
+              <span class="iconSpan"><i class="material-symbols-outlined">phone</i></span><span class="ms-2">+212 776 41 25</span>
             </li>
           </ul>
         </div>
